--- a/catalog/ui/catalog-ui-search-api/pom.xml
+++ b/catalog/ui/catalog-ui-search-api/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
