DDF-6152 Added standalone solr gazetteer
This adds a new gazetteer feature that copies all gazetteer data into a separate solr core called `gazetteer`. This allows the index to be updated without the overhead of all other items in the catalog.

--- a/catalog/solr/pom.xml
+++ b/catalog/solr/pom.xml
@@ -35,6 +35,7 @@
     <modules>
         <module>catalog-solr-provider</module>
         <module>catalog-solr-solrclient</module>
+        <module>catalog-solr-offline-gazetteer</module>
         <module>solr-app</module>
     </modules>
 </project>
