--- a/catalog/solr/solr-app/pom.xml
+++ b/catalog/solr/solr-app/pom.xml
@@ -87,5 +87,10 @@
             <artifactId>catalog-solr-solrclient</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.solr</groupId>
+            <artifactId>catalog-solr-offline-gazetteer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
