--- a/platform/metrics/metrics-servlet-filter/pom.xml
+++ b/platform/metrics/metrics-servlet-filter/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>${org.slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform</groupId>
+            <artifactId>platform-paxweb-jettyconfig</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
