DDF-6242 initial commit

--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -185,8 +185,8 @@ log4j2.appender.ingestError.strategy.max = 10
 # Content Directory Monitor
 log4j2.appender.contentDirectoryMonitor.type = RollingFile
 log4j2.appender.contentDirectoryMonitor.name = cdm
-log4j2.appender.contentDirectoryMonitor.fileName = ${karaf.log}/cdm.log
-log4j2.appender.contentDirectoryMonitor.filePattern = ${karaf.log}/cdm.log-%d{yyyy-MM-dd-HH}-%i.log.gz
+log4j2.appender.contentDirectoryMonitor.fileName = ${karaf.data}/log/cdm.log
+log4j2.appender.contentDirectoryMonitor.filePattern = ${karaf.data}/log/cdm.log-%d{yyyy-MM-dd-HH}-%i.log.gz
 log4j2.appender.contentDirectoryMonitor.append = true
 log4j2.appender.contentDirectoryMonitor.ignoreExceptions = false
 log4j2.appender.contentDirectoryMonitor.layout.type = PatternLayout
