--- a/platform/platform-scheduler/pom.xml
+++ b/platform/platform-scheduler/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- 
+<!--
 /**
  * Copyright (c) Codice Foundation
  *
  * This is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either
- * version 3 of the License, or any later version. 
+ * version 3 of the License, or any later version.
  *
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  * See the GNU Lesser General Public License for more details. A copy of the GNU Lesser General Public License is distributed along with this program and can be found at
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.1.7</version>
+            <version>${quartz.version}</version>
         </dependency>
         <dependency>
             <groupId>ddf.security.core</groupId>
@@ -45,9 +45,9 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>c3p0</groupId>
+            <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.1.1</version>
+            <version>${c3p0.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -104,6 +104,8 @@
                         <Embed-Dependency>
                             quartz,
                             c3p0,
+                            mchange-commons-java,
+                            HikariCP-java7,
                             httpclient,
                             httpcore
                         </Embed-Dependency>
@@ -115,8 +117,43 @@
                         </Private-Package>
                         <Export-Package />
                         <Import-Package>
-                            cubrid.jdbc.driver;resolution:=optional,
+                            <!-- bnd doesn't use the manifest of embedded dependencies to determine
+                                 imports. Optional or excluded packages of embeds will end up as
+                                 required packages in this bundle. This forces us to manually
+                                 specify optional and excluded packages. -->
+                            <!-- TODO: Remove embeds so we don't have to manage this import list -->
+
+                            <!-- BEGIN: Quartz imports -->
+                            javax.sql;resolution:=optional,
+                            javax.transaction;resolution:=optional,
                             javax.ejb;resolution:=optional,
+                            javax.jms;resolution:=optional,
+                            org.terracotta.toolkit.*;resolution:=optional,
+                            weblogic.jdbc.*;resolution:=optional,
+                            oracle.sql;resolution:=optional,
+                            org.jboss.logging;resolution:=optional,
+                            org.jboss.naming;resolution:=optional,
+                            org.jboss.system;resolution:=optional,
+                            commonj.work;resolution:=optional,
+                            org.quartz.jobs;resolution:=optional,
+                            <!-- END -->
+                            <!-- BEGIN: HikariCP-java7 imports -->
+                            !io.prometheus.client,
+                            !javassist,
+                            !javassist.bytecode,
+                            com.codahale.metrics;resolution:=optional,
+                            com.codahale.metrics.health;resolution:=optional,
+                            org.hibernate;resolution:=optional,
+                            org.hibernate.cfg;resolution:=optional,
+                            org.hibernate.engine.jdbc.connections.spi;resolution:=optional,
+                            org.hibernate.service;resolution:=optional,
+                            org.hibernate.service.spi;resolution:=optional,
+                            <!-- END -->
+                            <!-- BEGIN: mchange-commons-java imports -->
+                            com.typesafe.config;resolution:=optional,
+                            org.apache.logging.log4j.core;resolution:=optional,
+                            org.apache.logging.log4j.core.config;resolution:=optional,
+                            <!-- END -->
                             *
                         </Import-Package>
                     </instructions>
@@ -135,7 +172,7 @@
                         <configuration>
                             <rules>
                                 <ArtifactSizeEnforcerRule implementation="org.codice.maven.artifactsize.ArtifactSizeEnforcerRule">
-                                    <maxArtifactSize>2.6_MB</maxArtifactSize>
+                                    <maxArtifactSize>2.9_MB</maxArtifactSize>
                                 </ArtifactSizeEnforcerRule>
                             </rules>
                         </configuration>
