--- a/libs/bundles/libs-bundles-opensaml/pom.xml
+++ b/libs/bundles/libs-bundles-opensaml/pom.xml
@@ -117,6 +117,15 @@
             <artifactId>opensaml-xacml-saml-impl</artifactId>
             <version>${opensaml.version}</version>
         </dependency>
+        <dependency>
+            <!--
+                Force version. v3.2.1 has CVEs: CVE-2015-6420 and CVE-2017-15708
+                Remove when opensaml no longer has 3.2.1 dependency
+                -->
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${commons-collections.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
