--- a/catalog/ui/search-ui-app/pom.xml
+++ b/catalog/ui/search-ui-app/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-jsp</artifactId>
-            <version>${pax.web.version}</version>
+            <version>${pax.web.jsp.version}</version>
         </dependency>
     </dependencies>
 </project>
