DDF-6215 Upgrade to Karaf 4.2.9 (#6216)
* DDF-6215 Upgrade to Karaf v4.2.9

* DDF-6215 Move DelegateServletFilter to SercurityFilter chain

* DDF-6215 Move DelegatingSecurityFilter to the Jetty Handler chain

* DDF-6215 Address PR comments

* DDF-6215 Move HttpFilter interface to new bundle and use service ranking to order HttpFilters

* DDF-6215 Update javadoc for DelegatingHttpFilterHandler

* DDF-6215 Fix formatting

--- a/platform/metrics/metrics-servlet-filter/pom.xml
+++ b/platform/metrics/metrics-servlet-filter/pom.xml
@@ -30,6 +30,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>ddf.platform</groupId>
+            <artifactId>http-filter-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-core</artifactId>
             <version>${micrometer.version}</version>
