--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -513,6 +513,11 @@
             <artifactId>security-guest-realm</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform</groupId>
+            <artifactId>http-filter-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!--feature dependencies-->
         <dependency>
