Upgrade to Solr 8.6.1
- Converted solrcloud directory to maven module for version properties
  and executing docker compose commands.

--- a/distribution/docker/solr-docker/pom.xml
+++ b/distribution/docker/solr-docker/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
-            <version>1.15.0</version>
+            <version>${jts.spatial4j.version}</version>
             <!-- Exclude all transitives unnecessary transitives. 
               This ensures that extra files are not sent to the docker daemon
               as part of the build context. -->
