--- a/features/pom.xml
+++ b/features/pom.xml
@@ -97,68 +97,99 @@
         <!-- START versions for CXF features
 
         DDF changes made
-        - Updated cxf.hibernate.validator.version to 5.3.6.Final and cxf.jasypt.bundle.version to 1.9.2_1 -->
+        - Removed properties that are not used-->
         <!-- please maintain alphabetical order here -->
         <cxf.abdera.osgi.version>${abdera.osgi.version}</cxf.abdera.osgi.version>
         <cxf.abdera.version>${abdera.version}</cxf.abdera.version>
-        <cxf.ahc.version>1.9.40</cxf.ahc.version>
-        <cxf.atmosphere.version>2.4.23</cxf.atmosphere.version>
-        <cxf.bcel.bundle.version>5.2_4</cxf.bcel.bundle.version>
-        <cxf.classmate.version>1.1.0</cxf.classmate.version>
+        <cxf.activemq.version>5.16.0</cxf.activemq.version>
+        <cxf.ahc.version>2.12.1</cxf.ahc.version>
+        <cxf.atmosphere.version>2.6.1</cxf.atmosphere.version>
+        <cxf.brave.reporter.version>2.12.1</cxf.brave.reporter.version>
+        <cxf.brave.version>5.11.2</cxf.brave.version>
+        <cxf.brave.zipkin.version>2.19.3</cxf.brave.zipkin.version>
+        <cxf.classgraph.version>4.8.25</cxf.classgraph.version>
+        <cxf.classmate.version>1.5.1</cxf.classmate.version>
         <cxf.commons-codec.version>${commons-codec-version}</cxf.commons-codec.version>
         <cxf.commons-collections.version>3.2.2</cxf.commons-collections.version>
         <cxf.commons-lang3.version>${commons-lang3.version}</cxf.commons-lang3.version>
-        <cxf.dom4j.bundle.version>${dom4j.bundle.version}</cxf.dom4j.bundle.version>
-        <cxf.dropwizard.version>3.2.6</cxf.dropwizard.version>
-        <cxf.ehcache.version>2.10.6</cxf.ehcache.version>
-        <cxf.fastinfoset.bundle.version>1.2.13_1</cxf.fastinfoset.bundle.version>
+        <cxf.commons-text.version>1.9</cxf.commons-text.version>
+        <cxf.dropwizard3.version>3.2.6</cxf.dropwizard3.version>
+        <cxf.dropwizard4.version>4.1.12.1</cxf.dropwizard4.version>
+        <cxf.ehcache3.version>3.8.1</cxf.ehcache3.version>
+        <cxf.geronimo.j2ee.management.version>1.0.1</cxf.geronimo.j2ee.management.version>
         <cxf.geronimo.jms.version>${geronimo-jms-spec-version}</cxf.geronimo.jms.version>
-        <cxf.geronimo.transaction.version>${geronimo-jta-spec-version}</cxf.geronimo.transaction.version>
-        <cxf.guava.version>20.0</cxf.guava.version>
-        <cxf.hazelcast.version>3.9.4</cxf.hazelcast.version>
-        <cxf.hibernate.validator.version>5.3.6.Final</cxf.hibernate.validator.version>
+        <cxf.geronimo.json.version>1.4</cxf.geronimo.json.version>
+        <cxf.geronimo.jta.version>1.1.1</cxf.geronimo.jta.version>
+        <cxf.guava.version>29.0-jre</cxf.guava.version>
+        <cxf.hazelcast.version>3.12.7</cxf.hazelcast.version>
+        <cxf.hibernate.validator.version>6.1.4.Final</cxf.hibernate.validator.version>
         <cxf.httpcomponents.asyncclient.version>4.1.4</cxf.httpcomponents.asyncclient.version>
+        <cxf.httpcomponents.client.version>4.5.12</cxf.httpcomponents.client.version>
         <cxf.httpcomponents.core.version>${httpcore.version}</cxf.httpcomponents.core.version>
+        <cxf.jackson.databind.version>2.11.2</cxf.jackson.databind.version>
+        <cxf.jackson.version>2.11.2</cxf.jackson.version>
+        <!-- Using jakarta.activation 1.2.1 instead of 1.2.2, as it requires Java 9.
+             See https://github.com/eclipse-ee4j/jaf/issues/37 -->
+        <cxf.jakarta.activation.version>1.2.1</cxf.jakarta.activation.version>
         <cxf.james.mim4j.version>0.7.2</cxf.james.mim4j.version>
-        <cxf.jasypt.bundle.version>1.9.2_1</cxf.jasypt.bundle.version>
-        <cxf.javassist.version>3.21.0-GA</cxf.javassist.version>
+        <cxf.javassist.version>3.25.0-GA</cxf.javassist.version>
         <cxf.javax.annotation-api.version>${javax.annotation-api.version}</cxf.javax.annotation-api.version>
-        <cxf.javax.mail.version>1.4.4</cxf.javax.mail.version>
-        <cxf.javax.servlet-api.version>${javax.servlet-api.version}</cxf.javax.servlet-api.version>
-        <cxf.jaxb.bundle.version>${jaxb.version}_1</cxf.jaxb.bundle.version>
         <cxf.jboss.logging.version>3.3.0.Final</cxf.jboss.logging.version>
-        <cxf.jdom.bundle.version>${jdom.bundle.version}</cxf.jdom.bundle.version>
-        <cxf.jettison.version>1.4.0</cxf.jettison.version>
+        <cxf.jettison.version>1.4.1</cxf.jettison.version>
         <cxf.joda.time.version>${joda-time.version}</cxf.joda.time.version>
+        <cxf.johnzon.version>1.2.8</cxf.johnzon.version>
+        <cxf.mina.version>2.1.3</cxf.mina.version>
         <cxf.neethi.version>3.1.1</cxf.neethi.version>
-        <cxf.netty.version>4.0.56.Final</cxf.netty.version>
-        <cxf.netty3.version>3.10.6.Final</cxf.netty3.version>
+        <cxf.netty.version>4.1.50.Final</cxf.netty.version>
         <cxf.opensaml.osgi.version>${opensaml.osgi.version}</cxf.opensaml.osgi.version>
+        <cxf.opentracing.version>0.33.0</cxf.opentracing.version>
+        <cxf.reactivestreams.version>1.0.3</cxf.reactivestreams.version>
+        <!-- Using saaj-impl 1.3.28 instead of 1.5.2, as it requires packages saaj-api 1.4+
+             which isn't provided by Karaf (as of 4.2.9). We could add the newer saaj-api, but
+             using the older saaj-impl seems to work fine -->
+        <cxf.saaj-impl.version>1.3.28_1</cxf.saaj-impl.version>
+        <cxf.servlet-api.artifact>jakarta.servlet-api</cxf.servlet-api.artifact>
+        <cxf.servlet-api.group>jakarta.servlet</cxf.servlet-api.group>
+        <cxf.servlet-api.version>4.0.4</cxf.servlet-api.version>
+        <cxf.snakeyaml.version>1.26</cxf.snakeyaml.version>
+        <cxf.specs.jaxws.api.version>2.3_2</cxf.specs.jaxws.api.version>
+        <cxf.stax-ex.version>1.8.3</cxf.stax-ex.version>
+        <cxf.swagger.v3.version>2.1.4</cxf.swagger.v3.version>
+        <cxf.swagger2.version>1.6.2</cxf.swagger2.version>
+        <cxf.swagger2.guava.version>27.0-jre</cxf.swagger2.guava.version>
+        <cxf.validation.api.version>2.0.2</cxf.validation.api.version>
+        <cxf.velocity.version>2.2</cxf.velocity.version>
+        <cxf.woodstox.core.version>${woodstox.core.version}</cxf.woodstox.core.version>
+        <cxf.woodstox.stax2-api.version>${woodstox.stax2-api.version}</cxf.woodstox.stax2-api.version>
+        <cxf.wss4j.version>${wss4j.version}</cxf.wss4j.version>
+        <cxf.xjc-utils.version>3.3.1</cxf.xjc-utils.version>
+        <cxf.xmlschema.version>2.2.5</cxf.xmlschema.version>
+
+        <!-- various OSGi related versions -->
+        <cxf.aries.fly.version>1.2</cxf.aries.fly.version>
+        <cxf.bcel.bundle.version>5.2_4</cxf.bcel.bundle.version>
+        <cxf.dom4j.bundle.version>${dom4j.bundle.version}</cxf.dom4j.bundle.version>
+        <cxf.fastinfoset.bundle.version>1.2.18_1</cxf.fastinfoset.bundle.version>
+        <cxf.istack.bundle.version>3.0.7</cxf.istack.bundle.version>
+        <cxf.jakarta.mail.version>1.6.5</cxf.jakarta.mail.version>
+        <cxf.jasypt.bundle.version>1.9.3_1</cxf.jasypt.bundle.version>
+        <cxf.jaxb.bundle.version>${jaxb.version}_1</cxf.jaxb.bundle.version>
+        <cxf.jdom.bundle.version>${jdom.bundle.version}</cxf.jdom.bundle.version>
         <cxf.oauth.bundle.version>20100527_1</cxf.oauth.bundle.version>
         <cxf.reflections.bundle.version>0.9.11_2</cxf.reflections.bundle.version>
         <cxf.rhino.bundle.version>1.7R2_3</cxf.rhino.bundle.version>
-        <cxf.saaj-impl.bundle.version>1.3.23_2</cxf.saaj-impl.bundle.version>
-        <cxf.servicemix.aspectj.version>1.8.7_2</cxf.servicemix.aspectj.version>
-        <cxf.servicemix.cglib.version>3.2.0_1</cxf.servicemix.cglib.version>
+        <cxf.servicemix.aspectj.version>1.9.1_1</cxf.servicemix.aspectj.version>
+        <cxf.servicemix.cglib.version>3.3.0_1</cxf.servicemix.cglib.version>
+        <cxf.servicemix.javax.el.version>3.0.0_1</cxf.servicemix.javax.el.version>
+        <cxf.servicemix.jaxrs.specs.version>2.9.1</cxf.servicemix.jaxrs.specs.version>
         <cxf.servicemix.jodatime.version>2.3_1</cxf.servicemix.jodatime.version>
         <cxf.servicemix.jsoup.version>1.5.2_2</cxf.servicemix.jsoup.version>
-        <cxf.servicemix.specs.version.jaxrs>2.9.1</cxf.servicemix.specs.version.jaxrs>
+        <cxf.servicemix.specs.jaxb.version>2.3_2</cxf.servicemix.specs.jaxb.version>
         <cxf.servicemix.specs.version>2.9.0</cxf.servicemix.specs.version>
-        <cxf.stax-ex.version>1.7.6</cxf.stax-ex.version>
-        <cxf.swagger2.version>1.5.21</cxf.swagger2.version>
-        <cxf.swagger3.version>2.0.0</cxf.swagger3.version>
-        <cxf.validation.api.version>1.1.0.Final</cxf.validation.api.version>
-        <cxf.velocity.version>2.0</cxf.velocity.version>
-        <cxf.woodstox.core.version>${woodstox.core.version}</cxf.woodstox.core.version>
-        <cxf.woodstox.stax2-api.version>${woodstox.stax2-api.version}
-        </cxf.woodstox.stax2-api.version>
         <cxf.wsdl4j.bundle.version>1.6.3_1</cxf.wsdl4j.bundle.version>
-        <cxf.wss4j.version>${wss4j.version}</cxf.wss4j.version>
         <cxf.xalan.bundle.version>${xalan.bundle.version}</cxf.xalan.bundle.version>
         <cxf.xerces.bundle.version>2.12.0_1</cxf.xerces.bundle.version>
-        <cxf.xjc-utils.version>3.2.3</cxf.xjc-utils.version>
         <cxf.xmlresolver.bundle.version>1.2_5</cxf.xmlresolver.bundle.version>
-        <cxf.xmlschema.version>2.2.4</cxf.xmlschema.version>
         <cxf.xmlsec.bundle.version>${xmlsec.version}</cxf.xmlsec.bundle.version>
         <!-- END CXF properties -->
 
