Reduce average query size sent to Solr
- Removes the dynamic generation of AnyText fields. This creates poor
  query performance when expanding to hundreds of fields.
- Removes filtered attribute feature that generated large field lists
  but failed to significantly reduce query time for majority of
  queries.
- Removes spellcheck parameter if spell check is not enabled for the
  query.
- Removes score from field list if not sorting by relevance.

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -87,7 +87,7 @@ solr.mem=2g
 solr.useBasicAuth=true
 solr.username=admin
 
-
+solr.query.anytext.fields=metadata,title,description,ext.extracted.text
 
 # Comma-separated list of metacard types that do not support optimistic updates.
 solr.commit.nrt.metacardTypes=workspace,metacard.query,metacard.list,query-template,attribute-group,resource-note
