Fix running DDF as a windows service - Incremented additional parameter numbers in   setenv-windows-wrapper.conf to allow sshing - Update documentation to note issues and workarounds

--- a/distribution/ddf-common/src/main/resources/bin/setenv-windows-wrapper.conf
+++ b/distribution/ddf-common/src/main/resources/bin/setenv-windows-wrapper.conf
@@ -10,34 +10,38 @@ wrapper.on_exit.10=RESTART
 wrapper.commandfile=%KARAF_HOME%/bin/restart.jvm
 
 # Additional JVM parameters
-# note that n is the parameter number starting from 11 (1-10 is defined in ddf-wrapper.conf).
+# note that n is the parameter number starting from 15 (1-14 is defined in ddf-wrapper.conf)
+# also note that any additional parameters should be added to this file rather than ddf-wrapper.conf
 # ### make sure there is no gap renumber remaining parameters if you add, remove or uncomment lines
 # ### Replace any <Number> with the next available number
-wrapper.java.additional.14=-server
-wrapper.java.additional.15=-Dfile.encoding="UTF8"
-wrapper.java.additional.16=-Dkaraf.instances="%KARAF_HOME%/instances"
-wrapper.java.additional.17=-Dkaraf.restart.jvm.supported="true"
-wrapper.java.additional.18=-Djava.io.tmpdir="%KARAF_DATA%/tmp"
-wrapper.java.additional.19=-Djava.util.logging.config.file="%KARAF_HOME%/etc/java.util.logging.properties"
-wrapper.java.additional.20=-XX:+UnlockDiagnosticVMOptions
-wrapper.java.additional.21=-XX:+DisableAttachMechanism
-wrapper.java.additional.22=-XX:+UnsyncloadClass
-wrapper.java.additional.23=-Djava.awt.headless="true"
-wrapper.java.additional.24=-Dddf.home="%KARAF_HOME%"
-wrapper.java.additional.25=-Dddf.home.perm=%KARAF_HOME%\
+wrapper.java.additional.15=-server
+wrapper.java.additional.16=-Dfile.encoding="UTF8"
+wrapper.java.additional.17=-Dkaraf.instances="%KARAF_HOME%/instances"
+wrapper.java.additional.18=-Dkaraf.restart.jvm.supported="true"
+wrapper.java.additional.19=-Djava.io.tmpdir="%KARAF_DATA%/tmp"
+wrapper.java.additional.20=-Djava.util.logging.config.file="%KARAF_HOME%/etc/java.util.logging.properties"
+wrapper.java.additional.21=-XX:+UnlockDiagnosticVMOptions
+wrapper.java.additional.22=-XX:+DisableAttachMechanism
+wrapper.java.additional.23=-XX:+UnsyncloadClass
+wrapper.java.additional.24=-Djava.awt.headless="true"
+wrapper.java.additional.25=-Dddf.home="%KARAF_HOME%"
+wrapper.java.additional.26=-Dddf.home.perm=%KARAF_HOME%\
 
 # Enables MBean support for the service wrapper; used to trigger restart
-wrapper.java.additional.26=-Dorg.tanukisoftware.wrapper.WrapperManager.mbean="TRUE"
+wrapper.java.additional.27=-Dorg.tanukisoftware.wrapper.WrapperManager.mbean="TRUE"
 
 # Error handling scripts
-wrapper.java.additional.27="-XX:OnOutOfMemoryError=%KARAF_HOME%/bin/ddf_on_error.bat wrapper %p"
-wrapper.java.additional.28="-XX:OnError=%KARAF_HOME%/bin/ddf_on_error.bat wrapper %p"
+wrapper.java.additional.28="-XX:OnOutOfMemoryError=%KARAF_HOME%/bin/ddf_on_error.bat wrapper %p"
+wrapper.java.additional.29="-XX:OnError=%KARAF_HOME%/bin/ddf_on_error.bat wrapper %p"
 
 # Set the JVM initial and max heap space as desired
 # The wrapper is limited to 4g so setting it to 0 to disable it and using additional parameters to pass it directly to the JVM
 wrapper.java.initmemory=2048
 wrapper.java.maxmemory=0
-wrapper.java.additional.29=-Xmx6g
+wrapper.java.additional.30=-Xmx6g
 
 # Uncomment to enable cxf logging interceptors
 # wrapper.java.additional.<Number>=-Dcom.sun.xml.ws.transport.http.HttpAdapter.dump="true"
+
+# Uncomment to enable debugging
+# wrapper.java.additional.<number>=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
