--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -146,12 +146,12 @@
                                     <destFileName>pro-grade-${pro-grade.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>javax.annotation</groupId>
-                                    <artifactId>javax.annotation-api</artifactId>
+                                    <groupId>jakarta.annotation</groupId>
+                                    <artifactId>jakarta.annotation-api</artifactId>
                                     <version>${javax.annotation-api.version}</version>
                                     <outputDirectory>${setup.folder}/ext</outputDirectory>
                                     <destFileName>
-                                        javax.annotation-api-${javax.annotation-api.version}.jar
+                                        jakarta.annotation-api-${javax.annotation-api.version}.jar
                                     </destFileName>
                                 </artifactItem>
                                 <!-- Crypter dependencies -->
