--- a/platform/admin/admin-configuration-configupdater/pom.xml
+++ b/platform/admin/admin-configuration-configupdater/pom.xml
@@ -48,9 +48,8 @@
             <version>${org.slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
-            <scope>provided</scope>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
