--- a/catalog/admin/catalog-admin-poller-service/pom.xml
+++ b/catalog/admin/catalog-admin-poller-service/pom.xml
@@ -63,6 +63,10 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
