--- a/catalog/core/catalog-core-attachment/pom.xml
+++ b/catalog/core/catalog-core-attachment/pom.xml
@@ -24,8 +24,8 @@
     <packaging>bundle</packaging>
     <dependencies>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
     <build>
