--- a/catalog/core/catalog-core-definitionparser/pom.xml
+++ b/catalog/core/catalog-core-definitionparser/pom.xml
@@ -68,8 +68,8 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
 
         <!-- test dependencies -->
@@ -137,7 +137,7 @@
                                             <value>COVEREDRATIO</value>
                                             <minimum>0.64</minimum>
                                         </limit>
-                                        
+
                                     </limits>
                                 </rule>
                             </rules>
