--- a/catalog/core/catalog-core-versioning/versioning-common/pom.xml
+++ b/catalog/core/catalog-core-versioning/versioning-common/pom.xml
@@ -50,8 +50,8 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
 
