--- a/catalog/opensearch/catalog-opensearch-api/pom.xml
+++ b/catalog/opensearch/catalog-opensearch-api/pom.xml
@@ -45,5 +45,9 @@
             <artifactId>security-core-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
     </dependencies>
 </project>
