--- a/catalog/plugin/catalog-plugin-metacardingest-network/pom.xml
+++ b/catalog/plugin/catalog-plugin-metacardingest-network/pom.xml
@@ -46,8 +46,8 @@
             <artifactId>slf4j-ext</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
 
