--- a/catalog/security/catalog-security-pointofcontact-policyplugin/pom.xml
+++ b/catalog/security/catalog-security-pointofcontact-policyplugin/pom.xml
@@ -46,6 +46,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ddf.security.core</groupId>
             <artifactId>security-core-services</artifactId>
             <version>${project.version}</version>
