--- a/catalog/solr/catalog-solr-core/pom.xml
+++ b/catalog/solr/catalog-solr-core/pom.xml
@@ -50,9 +50,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
-            <scope>provided</scope>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.catalog.core</groupId>
