--- a/catalog/transformer/catalog-transformer-propertyjson-metacard/pom.xml
+++ b/catalog/transformer/catalog-transformer-propertyjson-metacard/pom.xml
@@ -48,8 +48,8 @@
             <artifactId>commons-lang</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
     <build>
