--- a/platform/country-converter/platform-country-converter-local/pom.xml
+++ b/platform/country-converter/platform-country-converter-local/pom.xml
@@ -41,8 +41,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
         <dependency>
             <groupId>ddf.platform.util</groupId>
