--- a/platform/osgi/platform-osgi-internal-api/pom.xml
+++ b/platform/osgi/platform-osgi-internal-api/pom.xml
@@ -32,9 +32,8 @@
             <version>${osgi.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
-            <scope>provided</scope>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
     </dependencies>
 
