--- a/platform/solr/solr-factory-impl/pom.xml
+++ b/platform/solr/solr-factory-impl/pom.xml
@@ -56,8 +56,8 @@
             <version>${jodah-failsafe.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
