--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,8 @@
         <json-simple.version>1.1.1</json-simple.version>
         <json-smart.version>2.3</json-smart.version>
         <jsoup.version>1.11.3</jsoup.version>
-        <jsr305.version>3.0.2_1</jsr305.version>
+        <jsr305.version>3.0.2</jsr305.version>
+        <jsr305.bundle.version>${jsr305.version}_1</jsr305.bundle.version>
         <jsr339-api.bundle.version>2.6.0</jsr339-api.bundle.version>
         <jts.bundle.version>1.16.0_2</jts.bundle.version>
         <jts.spatial4j.version>1.16.0</jts.spatial4j.version>
@@ -427,10 +428,14 @@
             <!-- END: BOMs -->
 
             <dependency>
-                <groupId>org.apache.servicemix.bundles</groupId>
-                <artifactId>org.apache.servicemix.bundles.jsr305</artifactId>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
                 <version>${jsr305.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
